--- a/app/views/oppties/edit.html.erb
+++ b/app/views/oppties/edit.html.erb
@@ -1,6 +1,8 @@
+<% if notice %>
+    <p id="notice"><%= notice %></p>
+<% end %>
 <div class="jumbotron">
-
-	<h2 style="text-align: center; padding-top: 20px;"><%= @oppty.opptyName %></h2>
+    <h2 style="text-align: center; padding-top: 20px;"><%= @oppty.opptyName %></h2>
 
 	<%= render 'form' %>
 
