UI changes to oppty edit

--- a/app/assets/stylesheets/oppties.css.scss
+++ b/app/assets/stylesheets/oppties.css.scss
@@ -43,4 +43,12 @@
 
 .oppty-btn:hover {
 	background-color: darken(#005DA0, 10%) !important;
+} 
+
+.bottom-button {
+	margin-top: 30px !important;	
+}
+
+.edit-bg {
+	padding-bottom: 100px !important;
 }
