--- a/app/views/oppties/_form.html.erb
+++ b/app/views/oppties/_form.html.erb
@@ -41,6 +41,6 @@
   </div>
 
   <div class="actions field-title">
-    <%= f.submit %>
+     <button class="btn btn-lg btn-primary btn-right oppty-btn bottom-button" type="submit">Update</button> 
   </div>
 <% end %>
