search box in assign page (no ajax)

--- a/app/assets/stylesheets/assign.css.scss
+++ b/app/assets/stylesheets/assign.css.scss
@@ -78,3 +78,11 @@
 .assign-button:focus {
 	outline:0 !important;
 }
+
+.btn-assign-search {
+  padding: 0px !important; 
+  //float:right !important;
+  border-style: none; 
+  background-color: #005DA0;
+  width: 40px; height: 40px;
+}
