added ui and cbrowse reflects excel sheet exactly

--- a/app/assets/stylesheets/crm.css.scss
+++ b/app/assets/stylesheets/crm.css.scss
@@ -59,4 +59,25 @@
 .btn-padded {
 	margin-right: 20px !important;
 }
-
+.filename{
+  margin-left: 20px;
+}
+.oldnew{
+  margin-left: 20px;
+}
+.add{
+  color: green;
+  margin-left: 20px;
+}
+.delete{
+  color: red;
+  margin-left: 20px;
+}
+.update{
+  color: blue;
+  margin-left: 20px;
+}
+.equal{
+  color: black;
+  margin-left: 20px;
+}
