history page is fixed

--- a/app/views/browse/index.html.erb
+++ b/app/views/browse/index.html.erb
@@ -279,6 +279,8 @@
           newUrl = urlSplit[0]+ "?within=" + select;
         else if (urlSplit[1].indexOf('within') > -1 && select == "999999")
           newUrl = urlSplit[0];
+        else if (urlSplit[1].indexOf('within') == -1)
+          newUrl = window.location.toString() + "&within=" + select;
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
@@ -290,6 +292,7 @@
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
+
         window.location = newUrl + "?within=" + select;
       }
       else {
@@ -297,6 +300,7 @@
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
+
         window.location = newUrl;
       }
     }); 
@@ -346,6 +350,8 @@
           newUrl = urlSplit[0]+ "?invalid=" + select;
         else if (urlSplit[1].indexOf('invalid') > -1 && select == "all")
           newUrl = urlSplit[0];
+        else if (urlSplit[1].indexOf('invalid') == -1)
+          newUrl = window.location.toString() + "&invalid=" + select;
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
@@ -357,6 +363,7 @@
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
+
         window.location = newUrl + "?invalid=" + select;
       }
       else {
@@ -364,6 +371,7 @@
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
+
         window.location = newUrl;
       }
     }); 
@@ -406,9 +414,12 @@
           newUrl = urlSplit[0]+ "?sort=" + select;
         else if (urlSplit[1].indexOf('sort') > -1 && select == "none")
           newUrl = urlSplit[0];
+        else if (urlSplit[1].indexOf('sort') == -1)
+          newUrl = window.location.toString() + "&sort=" + select;
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
+
         window.location = newUrl;
       }
       else if (select != "none") {
@@ -416,6 +427,7 @@
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
+
         window.location = newUrl + "?sort=" + select;
       }
       else { 
@@ -423,6 +435,7 @@
 
         if (newUrl.substring(newUrl.length-1) == '&')
           newUrl = newUrl.substring(0, newUrl.length-1);
+
         window.location = newUrl;
       }
     });
