added search feature to manager assigning tasks

--- a/app/assets/stylesheets/assign.css.scss
+++ b/app/assets/stylesheets/assign.css.scss
@@ -23,9 +23,11 @@
     min-height: 46px !important;
 }
 
-.writer-name {
-	line-height: 46px !important;
+.name{
+	line-height: 46px ;
 	margin: 0px !important;
+    font-size: 16px !important;
+    white-space: nowrap;
 }
 
 .un-assign-button {
@@ -35,7 +37,7 @@
 .plus {
   position:relative;
   top:15px;
-  left:30px;
+  left:40px;
   padding: 0px;
   width: 20px ;
   height: 20px ;
@@ -44,7 +46,7 @@
 .redx {
   position:relative;
   top:15px;
-  left:30px;
+  left:40px;
   padding: 0px;
   width: 20px ;
   height: 20px ;
@@ -77,12 +79,4 @@
 .assign-button:active,
 .assign-button:focus {
 	outline:0 !important;
-}
-
-.btn-assign-search {
-  padding: 0px !important; 
-  //float:right !important;
-  border-style: none; 
-  background-color: #005DA0;
-  width: 40px; height: 40px;
 }
