--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -47,8 +47,8 @@
           <li id="username"><a>Welcome <%=session[:username] %></a></li>
           <li class="tab nav-notifications">
             <div id="accordion">
-              <a href='javascript:;'><img src="/assets/notif-bell-2.png" name="notificationIcon" height="30" width="30" style="padding-bottom: 5px;"></a>
-              <div class='content'>  SOME CONTENT HERE </div>
+              <a href="javascript:;"><img src="/assets/notif-bell-2.png" name="notificationIcon" height="30" width="30" style="padding-bottom: 5px;"></a>
+              <div class="content">  SOME CONTENT HERE </div>
             </div>  
           </li>
           <li><a href=<%=sessions_destroy_path %>>Logout</a><li>
@@ -70,7 +70,8 @@
 <script>
   $(function() {
     $( "#accordion" ).accordion({
-      collapsible: true
+      collapsible: true,
+      active: false
     });
   });
 
@@ -95,17 +96,9 @@
   createClass('html body nav div #navbar ul li  #accordion a#ui-id-1.ui-accordion-header.ui-state-default.ui-accordion-icons.ui-corner-all',"padding-left: .5em !important;");
   /* notification icon spacing */
   createClass('html body nav div #navbar ul li  #accordion a#ui-id-1.ui-accordion-header.ui-state-default.ui-accordion-icons.ui-accordion-header-active.ui-state-active.ui-corner-top',"padding-left: .5em !important;");
+  /* notification icon background */
+  createClass('html body nav div #navbar ul li  div#accordion.ui-accordion.ui-widget.ui-helper-reset',"background-color: #F7F7F7 !important;");
 </script>
 
 </body>
 </html>
-<!--
-  <div class="hider">
-                <img src="/assets/notif-bell-2.png" name="notificationIcon" height="30" width="30" style="padding-bottom: 5px; margin-top: 15px;">
-
-                <ul data-role="listview">
-                  <li>I'm the collapsible set content.</li>
-                  <li>I should roll over the data beneath me.</li>
-                </ul>
-              </div> 
-  --> 
